--- a/style.css
+++ b/style.css
@@ -353,6 +353,31 @@ form .btn2{
     background: #262626;
     font-weight: 300;
 }
+.to-top{
+    background: #fff;
+    position: fixed;
+    bottom: 16px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    color: #ff004f;
+    text-decoration: none;
+    opacity: 0;
+    pointer-events: none;
+    transition: all .4s;
+}
+.to-top.active{
+    bottom: 32px;
+    pointer-events: auto;
+    opacity: 1;
+}
+
+
 /* -------------------------Making responsive--------------------------- */
 nav .fas{
     display: none;
